--- a/HLT_7.ipynb
+++ b/HLT_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HLT 7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNhz2/BDckZj84uI4gzezdC",
+      "authorship_tag": "ABX9TyOxSCFWNrQ+QE9blyFsFDhu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "source": [
         " # Implications of when AI fails. There is a specific article in the GDPR Law that covers this, especially with automated decision making. (opt in and out options).\n",
         "\n",
-        " A autonomous automobile hits a pedestrian; a drone partially piloted by a pilot crashes and causes damage; and an AI software application incorrectly diagnoses medical therapy. In each of these scenarios, who would be held accountable? Who is the car's owner? Who created the medical software programme? Is the drone's manufacturer or pilot? Who created the AI system? What about the AI system itself?.Since there are many parties involved in an AI system  (data provider, designer, manufacturer, programmer, developer, user and AI system itself),liability is difficult to establish when something goes wrong.\n",
+        " An autonomous automobile hits a pedestrian; a drone partially piloted by a pilot crashes and causes damage; and an AI software application incorrectly diagnoses medical therapy. In each of these scenarios, who would be held accountable? Who is the car's owner? Who created the medical software programme? Is the drone's manufacturer or pilot? Who created the AI system? What about the AI system itself?.Since there are many parties involved in an AI system  (data provider, designer, manufacturer, programmer, developer, user and AI system itself),liability is difficult to establish when something goes wrong.\n",
         "\n",
         "In the United Kingdom, for example, laws are being proposed under which the insurer will normally carry main liability in the event of an accident caused by an autonomous vehicle. In the absence of AI-related laws, people who have been harmed as a result of a failure of AI would most likely seek remedy under the tort of negligence.\n",
         "\n",
